[gd_scene load_steps=21 format=3 uid="uid://dvdig2uuyxaro"]

[ext_resource type="Script" path="res://Games/Blastroids/Scripts/blast_ship.gd" id="1_xfd4a"]
[ext_resource type="Texture2D" uid="uid://dsuvukl4b1wkm" path="res://Games/Blastroids/Images/spaceship3_0.png" id="2_3ecx7"]
[ext_resource type="Texture2D" uid="uid://dtc8afgna6x2" path="res://Assets/Images/sphere.png" id="3_mjp1v"]
[ext_resource type="Texture2D" uid="uid://cvsp2k7nknxbq" path="res://Games/Blastroids/Images/triangle2.png" id="4_c4vh4"]
[ext_resource type="Texture2D" uid="uid://dqjt825j2gcjh" path="res://Games/Blastroids/Images/spaceship3_markers2.png" id="5_8qmco"]
[ext_resource type="Texture2D" uid="uid://ciwwc0tvdug7y" path="res://Games/Blastroids/Images/blast_charge.png" id="6_ebk61"]
[ext_resource type="Texture2D" uid="uid://yjerfcwoback" path="res://Games/TunnelTanks/Images/charge_icon.png" id="7_4g7w5"]

[sub_resource type="Gradient" id="Gradient_e7rvf"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_s74sj"]
gradient = SubResource("Gradient_e7rvf")

[sub_resource type="Curve" id="Curve_in0o2"]
_data = [Vector2(0.00198807, 0.683395), 0.0, 0.0, 0, 0, Vector2(1, 0.0118082), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_jpwx4"]
curve = SubResource("Curve_in0o2")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_tao5p"]
particle_flag_disable_z = true
spread = 1.0
initial_velocity_min = 25.0
initial_velocity_max = 30.0
gravity = Vector3(0, 0, 0)
scale_curve = SubResource("CurveTexture_jpwx4")
color = Color(0.685733, 3.10443e-06, 5.77569e-07, 1)
color_ramp = SubResource("GradientTexture1D_s74sj")

[sub_resource type="Curve" id="Curve_1vj5b"]
_data = [Vector2(0.00795229, 0.304428), 0.0, 0.0, 0, 0, Vector2(1, 0.0118082), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_efqbx"]
curve = SubResource("Curve_1vj5b")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_04cpm"]
particle_flag_disable_z = true
spread = 1.0
initial_velocity_min = 25.0
initial_velocity_max = 25.0
gravity = Vector3(0, 0, 0)
scale_curve = SubResource("CurveTexture_efqbx")
color = Color(0.956863, 0.984314, 0, 1)
color_ramp = SubResource("GradientTexture1D_s74sj")

[sub_resource type="Gradient" id="Gradient_osqts"]
offsets = PackedFloat32Array(0, 0.157303, 0.606742, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_m2i44"]
gradient = SubResource("Gradient_osqts")

[sub_resource type="Curve" id="Curve_4xq2m"]
max_value = 3.0
_data = [Vector2(0, 0.043956), 0.0, 3.20045, 0, 0, Vector2(0.509709, 3), 2.5467, 2.5467, 0, 0, Vector2(0.980582, 0), -9.80953, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_f47lc"]
curve = SubResource("Curve_4xq2m")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_kuhyl"]
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
scale_curve = SubResource("CurveTexture_f47lc")
color = Color(0.439216, 1, 1, 1)
color_ramp = SubResource("GradientTexture1D_m2i44")

[node name="Ship" type="Node2D"]
z_index = 5
script = ExtResource("1_xfd4a")

[node name="Stars" type="Node2D" parent="."]
z_index = -10

[node name="Stars2" type="Node2D" parent="."]
z_index = -10

[node name="Stars3" type="Node2D" parent="."]
z_index = -10

[node name="Stars4" type="Node2D" parent="."]
z_index = -10

[node name="Stars5" type="Node2D" parent="."]
z_index = -10

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Vector" type="Node2D" parent="."]
z_index = -2

[node name="VectorSprite" type="Sprite2D" parent="Vector"]
modulate = Color(0.235294, 0.639216, 0.639216, 1)
texture_filter = 2
scale = Vector2(1.5, 1.5)
texture = ExtResource("4_c4vh4")

[node name="Ships" type="Node2D" parent="Vector"]

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_3ecx7")

[node name="Rockets" type="Node2D" parent="Sprite2D"]
z_index = -1
rotation = 1.5708

[node name="Rocket" type="Node2D" parent="Sprite2D/Rockets"]
position = Vector2(-5, 22)
rotation = -1.5708

[node name="RocketParticles" type="GPUParticles2D" parent="Sprite2D/Rockets/Rocket"]
rotation = -3.14159
emitting = false
amount = 16
process_material = SubResource("ParticleProcessMaterial_tao5p")
texture = ExtResource("3_mjp1v")
lifetime = 2.0
local_coords = true

[node name="RocketParticles2" type="GPUParticles2D" parent="Sprite2D/Rockets/Rocket"]
rotation = -3.14159
emitting = false
amount = 16
process_material = SubResource("ParticleProcessMaterial_04cpm")
texture = ExtResource("3_mjp1v")
local_coords = true

[node name="Rocket2" type="Node2D" parent="Sprite2D/Rockets"]
position = Vector2(7, 22)
rotation = -1.5708

[node name="RocketParticles" type="GPUParticles2D" parent="Sprite2D/Rockets/Rocket2"]
rotation = -3.14159
emitting = false
amount = 16
process_material = SubResource("ParticleProcessMaterial_tao5p")
texture = ExtResource("3_mjp1v")
lifetime = 2.0
local_coords = true

[node name="RocketParticles2" type="GPUParticles2D" parent="Sprite2D/Rockets/Rocket2"]
rotation = -3.14159
emitting = false
amount = 16
process_material = SubResource("ParticleProcessMaterial_04cpm")
texture = ExtResource("3_mjp1v")
local_coords = true

[node name="Sprite2D" type="Sprite2D" parent="Sprite2D"]
modulate = Color(0.0627451, 0.352941, 1, 1)
texture = ExtResource("5_8qmco")

[node name="GunCharges" type="Node2D" parent="Sprite2D"]
visible = false
show_behind_parent = true

[node name="Sprite2D" type="Sprite2D" parent="Sprite2D/GunCharges"]
texture_filter = 2
position = Vector2(30, -20)
scale = Vector2(0.25, 0.25)
texture = ExtResource("6_ebk61")

[node name="Sprite2D2" type="Sprite2D" parent="Sprite2D/GunCharges"]
texture_filter = 2
position = Vector2(30, 22)
scale = Vector2(0.25, 0.25)
texture = ExtResource("6_ebk61")

[node name="LowEnergySprite" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(0, 50)
texture = ExtResource("7_4g7w5")

[node name="ShieldsParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 3
process_material = SubResource("ParticleProcessMaterial_kuhyl")
texture = ExtResource("3_mjp1v")
lifetime = 0.5
one_shot = true
local_coords = true

[node name="Label" type="Label" parent="."]
offset_left = -18.0
offset_top = -63.0
offset_right = 22.0
offset_bottom = -40.0
